--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,9 @@
   "name": "stashdb-extension",
   "version": "0.1",
   "manifest_version": 3,
+  "icons": {
+    "256": "icon.png"
+  },
   "browser_specific_settings": {
     "gecko": {
       "id": "stashdb-extension@example.com"
