--- a/manifest.json
+++ b/manifest.json
@@ -7,23 +7,18 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "stashdb-extension@example.com"
+      "id": "stashdb-extension@example.com",
+      "strict_min_version": "109"
     }
   },
   "permissions": [
-    "background",
     "activeTab",
     "tabs",
     "storage",
     "unlimitedStorage"
   ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "page": "background.html"
   },
   "content_scripts": [
     {
